--- a/day06/실습7.css
+++ b/day06/실습7.css
@@ -10,6 +10,8 @@ a{ /*링크 기본값 제거 */
 /* ul 또는 ol에서 글머리 제거 */
 li{ list-style-type: none;}
 
+/* ================================================*/
+
 
 /* 헤더 CSS 부분 */
 #header{
