--- a/day08/실습10.css
+++ b/day08/실습10.css
@@ -2,79 +2,72 @@
 * {
     padding: 0px;
     margin: 0px;
-    box-sizing: border-box;
-    font-size: 12px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    /* border: 1px solid red; */
 }
+
+#wrap{ width: 100%;}
 
 li {list-style-type: none;}
 
-#space1{
- 
+.mainimg{
+    width: 552px;
+    height: 450px;
+    margin-right: 15px;
+}
+
+.인스타{width: 350px; height: 400px;}
+.mainimg2{ width: 175px; height: 51px;}
+
+
+.imgf{
+    width: 20px; height: 20px;
+    text-align: center;
+}
+
+.main{display:  flex; justify-content: center; width: 100%; margin-top: 150px; text-align: center;}
+
+
+.divider{
+    display: flex;
+    align-items: center; /* 수직 중앙 정렬 */
+    width: 350px;
+    margin-left: 50px;
+
+}
+
+.divider::before, .divider::after{
+    content: ""; /* 가상요소에는 빈 문자열 */
+    width: 100px;
+    height: 1px; /* 선 굵기 */
+    background-color: black;
+    margin: 0px 10px;
 }
 
 
-.가입{
-    color: blue;
+.login { background-color: #0095f6;
+    color: white;
+    width: 270px; height: 30px;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+input{ width:260px; height: 35px;
+    border-radius: 10px;
+    margin: 5px;
 }
 
 .Flogin{
     color: blue;
 }
 
-#imgf{
-    object-fit: contain;
-}
-
-.divider {
-    display: flex;
-    align-items: center;
-    /* 수직 중앙 정렬 */
-    width: 400px;
-
-}
-
-.divider::before,
-.divider::after {
-    content: "";
-    /* 가상요소에는 빈 문자열 */
-    width: 100px;
-    height: 1px;
-    /* 선 굵기 */
-    background-color: black;
-    margin: 0px 10px;
-}
-
-
-#mainimg1{
-    width: 600px;
-    height: 600px;
-    border: 2px solid red;
-}
-
-
-#계정{
+#footer > ul{
     display: flex;
     justify-content: center;
+    padding: 50px;   
 }
 
-#wrap{}
-#header{
-    width: 100%;
-    display: contents;
-}
+#footer > ul > li{ margin: 0px 0px 0px 20px;}
 
-#content{width: 1600px; margin:0 auto}
-#footer{width: 100%;}
+#footer > .footmenu2{ display: flex; justify-content: center; margin: 0 auto;}
 
-#footmenu1{
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    margin: 20px;
-}
-
-#footmenu2{
-    display: flex;
-    justify-content: center;
-}
