--- a/H_팀과제/H_팀과제.css
+++ b/H_팀과제/H_팀과제.css
@@ -6,9 +6,9 @@
 /*확인용*/
 *{
     border: 1px solid red;}
-#header{ height: 150px;}
-#main{height: 400px;}
-#footer{height: 100px;}
+/*  #header{ height: 150;}
+    #main{height: 400px;}
+    #footer{height: 100px;} */
 
 /* 공통 부문 */
 
@@ -37,6 +37,7 @@ li{ list-style-type: none;}
     flex-direction: row; /* 배치 방향 : 가로 */
     justify-content: space-between; /* 양쪽에 여백없이 균등정렬 */
     align-items: stretch;
+    width: 100%;
 }
 
 .H_LOGO{
@@ -103,16 +104,14 @@ li{ list-style-type: none;}
     padding-right: 25px;
 }
 
-
-
 .contentsa{
     display: flex;
-    width: 393px; height: 393;
+    width: 393px; height: 393px;
 }
 
 .contentsb{
     display: flex;
-    width: 343px; height: 150;
+    width: 393px; height: 150;
 }
 
 .HD{
@@ -139,16 +138,35 @@ li{ list-style-type: none;}
     display: flex;
 }
 
+
+#contents2{
+    width: 393px;
+}
+
+.H_part{
+    padding: 20px;
+}
+
+.title1{
+    width: 393px;
+}
+
 .H2_product1{
     display: flex;
+    width: 393px;
+    padding: 20px;
 }
 
 .H2_product2{
     display: flex;
+    width: 393px;
+    padding: 20px;
 }
 
 .H2_product3{
     display: flex;
+    width: 393px;
+    padding: 20px;
 }
 
 .H2_M{
@@ -168,14 +186,611 @@ li{ list-style-type: none;}
     display: flex;
 }
 
+
+
+.footer-inner{
+    width: 1280px;
+    margin: 0px auto;
+    background-color:#1F2023; 
+}
+
 .footer-logo1{
     width: 123px; height: 24px;
     margin: 25px;
+    background-color: white;
 }
 
 .footer-info{
     display: flex;
+    justify-content: space-between;
     margin: 25px;
+    padding: 5px;
+    width: 500px; height: 50px;
+    color: #9a9a9F;
 }
 
 
+.footer-info2{
+    font-weight: bold;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-info3{
+    font-weight: bold;
+    color: #66666b;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-info4{
+    font-weight: bold;
+    color: #66666b;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-info5{
+    font-weight: bold;
+    color: #66666b;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-info6{
+    font-weight: bold;
+    color: #66666b;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-left{
+    text-align: right;
+    width: 500px; height: 50px;
+
+}
+
+.footer-infoA{
+    margin: 25px;
+    color: #66666B;
+    
+}
+
+.footer-infoB{
+    margin: 25px;
+    color: #66666B;
+  
+}
+
+.footer-infoC{
+    margin: 25px;
+    color: #66666B;
+  
+}
+/* 패밀리 사이트 */
+.FMY{
+    text-align: end;
+    color: white;
+    padding: 40px;
+}
+
+.contents2-1{
+    margin-bottom: 30px;
+}
+
+.contents2-2{
+    margin-bottom: 30px;
+}
+
+.contents2-3{
+    margin-bottom: 30px;
+}
+
+.contents2-4{
+    margin-bottom: 30px;
+}
+
+.contents2-5{
+    margin-bottom: 30px;
+}
+
+.contents2-6{
+    margin-bottom: 30px;
+}
+
+.contents2-7{
+    margin-bottom: 30px;
+}
+
+.contents2-8{
+    margin-bottom: 30px;
+}
+
+.contents2-9{
+    margin-bottom: 30px;
+}
+
+.contents2-10{
+    margin-bottom: 30px;
+}
+
+.contents2-11{
+    margin-bottom: 30px;
+}
+
+
+.contents3-1{
+    margin-bottom: 30px;
+}
+
+
+
+/* ----------------[사진_1라인]-----------------------*/
+
+
+.사진1{
+    background-image: url("../H_팀과제/H_ch.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    
+}
+
+
+.사진1 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진1 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+
+
+
+
+
+.사진2{
+    background-image: url("../H_팀과제/H_DA.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진2 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진2 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진3{
+    background-image: url("../H_팀과제/H_MM.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진3 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진3 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진4{
+    background-image: url("../H_팀과제/H_DDD.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진4 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진4 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진5{
+    background-image: url("../H_팀과제/H_DS.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진5 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진5 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진6{
+    background-image: url("../H_팀과제/H_DDDD.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진6 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진6 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진7{
+    background-image: url("../H_팀과제/H_DDDDD.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진7 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진7 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진8{
+    background-image: url("../H_팀과제/H_AAA.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진8 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진8 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진9{
+    background-image: url("../H_팀과제/H_SS.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진9 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진9 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진10{
+    background-image: url("../H_팀과제/H_SSS.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진10 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진10 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진11{
+    background-image: url("../H_팀과제/H_CCC.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진11 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진11 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진12{
+    background-image: url("../H_팀과제/H_TT.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진12 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진12 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진13{
+    background-image: url("../H_팀과제/H_BL.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진13 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진13 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
+
+.사진14{
+    background-image: url("../H_팀과제/H_OO.jpg");
+    width: 393px;
+    height: 393px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+   
+}
+
+
+.사진14 > p {
+    position: absolute;
+    bottom: 50px;
+    text-align: left;
+    padding: 10px;
+    color: white;
+    font-weight: bold;
+    font-size: 25px;
+    background-color: #0000001F;
+    width: 393px;
+}
+
+.사진14 > span{
+    position: absolute;
+    bottom: 5px;
+    padding: 10px;
+    color: white;
+    background-color: #0000001F;
+    width: 393px;
+
+}
